Added User CRUD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.password=docker
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#SecretKey JWT
+auth.jwt.secret=Ch@ve.Muito.Muito.forte.P@RA.Ninguem.Descobrir
+#1 dia em milisegundos
+auth.jwt-expiration-millisec=86400000
