Remaking of User Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.password=docker
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#SECRET KEY
+auth.jwt.secret=Ch@ave.Muito.Muito.Muito.Forte.P@ra.Ninguem.D3scobrir
+#1 dia util em milisegundos
+auth.jwt-expiration-millisec=86400000
