--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
             <version>2.3.8</version>
         </dependency>
 
-		<!-- <dependency>
+		 <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
@@ -71,7 +71,7 @@
             <artifactId>jjwt-impl</artifactId>
             <version>0.11.5</version>
             <scope>runtime</scope>
-        </dependency> -->
+        </dependency> 
 
 	</dependencies>
 
